--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 <body>
     <div id="menu">
         <h3>Dimensões</h3>
-        <a href="https://raw.githubusercontent.com/yuridmayerpro/analise_politica/refs/heads/main/graficos_html/fig_pslri_regime.html" target="content-frame">Resumo dos Regimes</a>
-        <a href="https://raw.githubusercontent.com/yuridmayerpro/analise_politica/refs/heads/main/graficos_html/fig_pib_regime.html" target="content-frame">Indicadores Econômicos</a>
+        <a href="graficos_html/fig_pslri_regime.html" target="content-frame">Resumo dos Regimes</a>
+        <a href="graficos_html/fig_pib_regime.html" target="content-frame">Indicadores Econômicos</a>
         <!-- Adicione links para os outros gráficos aqui -->
     </div>
     <div id="content">
