--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
             font-family: Arial, sans-serif;
         }
         #menu {
-            width: 200px;
+            width: 250px;
             float: left;
             padding: 10px;
             border-right: 1px solid #ddd;
+            height: 100vh;
+            overflow-y: auto;
+        }
+        #menu h3 {
+            margin-top: 20px;
+            border-bottom: 1px solid #ccc;
+            padding-bottom: 5px;
         }
         #menu a {
             display: block;
@@ -24,12 +31,12 @@
             text-decoration: underline;
         }
         #content {
-            margin-left: 220px;
+            margin-left: 270px;
             padding: 10px;
         }
         iframe {
             width: 100%;
-            height: 500px;
+            height: 600px;
             border: none;
         }
     </style>
@@ -37,9 +44,64 @@
 <body>
     <div id="menu">
         <h3>Dimensões</h3>
-        <a href="graficos_html/fig_pslri_regime.html" target="content-frame">Resumo dos Regimes</a>
-        <a href="graficos_html/fig_pib_regime.html" target="content-frame">Indicadores Econômicos</a>
-        <!-- Adicione links para os outros gráficos aqui -->
+        <h4>Resumo dos Regimes e Composição Política</h4>
+        <a href="graficos_html/fig_pslri_regime.html" target="content-frame">PSLRI Regime</a>
+        <a href="graficos_html/fig_pslri_distribuicao.html" target="content-frame">Distribuição PSLRI</a>
+
+        <h4>Indicadores Econômicos</h4>
+        <a href="graficos_html/fig_pib_vida.html" target="content-frame">PIB e Expectativa de Vida</a>
+        <a href="graficos_html/fig_pib_regime.html" target="content-frame">PIB por Regime</a>
+        <a href="graficos_html/fig_pib_pslri.html" target="content-frame">PIB por PSLRI</a>
+        <a href="graficos_html/fig_crescimento_pib.html" target="content-frame">Crescimento PIB por Regime</a>
+        <a href="graficos_html/fig_crescimento_pib_pslri.html" target="content-frame">Crescimento PIB por PSLRI</a>
+        <a href="graficos_html/fig_gini_regime.html" target="content-frame">Índice de Gini por Regime</a>
+        <a href="graficos_html/fig_gini_pslri.html" target="content-frame">Índice de Gini por PSLRI</a>
+        <a href="graficos_html/fig_balanca_regime.html" target="content-frame">Balança Comercial por Regime</a>
+        <a href="graficos_html/fig_balanca_pslri.html" target="content-frame">Balança Comercial por PSLRI</a>
+
+        <h4>Indicadores de Desenvolvimento Humano</h4>
+        <a href="graficos_html/fig_idh_regime_politico.html" target="content-frame">IDH por Regime</a>
+        <a href="graficos_html/fig_idh_pslri.html" target="content-frame">IDH por PSLRI</a>
+        <a href="graficos_html/fig_expectativa_vida.html" target="content-frame">Expectativa de Vida por Regime</a>
+        <a href="graficos_html/fig_expectativa_vida_pslri.html" target="content-frame">Expectativa de Vida por PSLRI</a>
+        <a href="graficos_html/fig_alfabetizacao_politico.html" target="content-frame">Alfabetização por Regime</a>
+        <a href="graficos_html/fig_alfabetizacao_pslri.html" target="content-frame">Alfabetização por PSLRI</a>
+
+        <h4>Indicadores Sociais</h4>
+        <a href="graficos_html/fig_taxa_pobreza_regime.html" target="content-frame">Taxa de Pobreza por Regime</a>
+        <a href="graficos_html/fig_taxa_pobreza_pslri.html" target="content-frame">Taxa de Pobreza por PSLRI</a>
+        <a href="graficos_html/fig_desigualdade_genero_regime.html" target="content-frame">Desigualdade de Gênero por Regime</a>
+        <a href="graficos_html/fig_desigualdade_genero_pslri.html" target="content-frame">Desigualdade de Gênero por PSLRI</a>
+        <a href="graficos_html/fig_taxa_desemprego_regime.html" target="content-frame">Taxa de Desemprego por Regime</a>
+        <a href="graficos_html/fig_taxa_desemprego_pslri.html" target="content-frame">Taxa de Desemprego por PSLRI</a>
+
+        <h4>Indicadores Ambientais e de Sustentabilidade</h4>
+        <a href="graficos_html/fig_pegada_ecologica_regime.html" target="content-frame">Pegada Ecológica por Regime</a>
+        <a href="graficos_html/fig_pegada_ecologica_pslri.html" target="content-frame">Pegada Ecológica por PSLRI</a>
+        <a href="graficos_html/fig_emissoes_co2_politico.html" target="content-frame">Emissões de CO₂ por Regime</a>
+        <a href="graficos_html/fig_emissoes_co2_pslri.html" target="content-frame">Emissões de CO₂ por PSLRI</a>
+
+        <h4>Indicadores Institucionais e de Governança</h4>
+        <a href="graficos_html/fig_corrupcao_regime.html" target="content-frame">Corrupção por Regime</a>
+        <a href="graficos_html/fig_corrupcao_pslri.html" target="content-frame">Corrupção por PSLRI</a>
+        <a href="graficos_html/fig_liberdade_economica.html" target="content-frame">Liberdade Econômica por Regime</a>
+        <a href="graficos_html/fig_liberdade_economica_pslri.html" target="content-frame">Liberdade Econômica por PSLRI</a>
+        <a href="graficos_html/fig_democracia_liberal.html" target="content-frame">Democracia Liberal por Regime</a>
+        <a href="graficos_html/fig_democracia_liberal_pslri.html" target="content-frame">Democracia Liberal por PSLRI</a>
+
+        <h4>Indicadores Demográficos</h4>
+        <a href="graficos_html/fig_crescimento_populacional_regime.html" target="content-frame">Crescimento Populacional por Regime</a>
+        <a href="graficos_html/fig_crescimento_populacional_pslri.html" target="content-frame">Crescimento Populacional por PSLRI</a>
+        <a href="graficos_html/fig_populacao_urbana_regime.html" target="content-frame">População Urbana por Regime</a>
+        <a href="graficos_html/fig_populacao_urbana_pslri.html" target="content-frame">População Urbana por PSLRI</a>
+
+        <h4>Indicadores Culturais</h4>
+        <a href="graficos_html/fig_despesas_culturais_politico.html" target="content-frame">Despesas Culturais por Regime</a>
+        <a href="graficos_html/fig_despesas_culturais_pslri.html" target="content-frame">Despesas Culturais por PSLRI</a>
+        <a href="graficos_html/fig_satisfacao_vida_regime.html" target="content-frame">Satisfação com a Vida por Regime</a>
+        <a href="graficos_html/fig_satisfacao_vida_pslri.html" target="content-frame">Satisfação com a Vida por PSLRI</a>
+        <a href="graficos_html/fig_cultura_democratica_regime.html" target="content-frame">Cultura Democrática por Regime</a>
+        <a href="graficos_html/fig_cultura_democratica_pslri.html" target="content-frame">Cultura Democrática por PSLRI</a>
     </div>
     <div id="content">
         <iframe name="content-frame" src=""></iframe>
